# schoff_FM

./: .gitignore  CMakeLists.txt  JUCE_FFT_Integration.h  JUCE_INTEGRATION_GUIDE.cpp  LICENSE  README.md  effect.dsp  effect.h  schoff_FM.jucer  schoff_stereo.dsp  schoffhauzer_faceplate_final.html  schoffhauzer_synth_faceplate.html  setup webview2  setup_webview2.ps1  shoff faceplate final  webview2 Juice
Builds/AndroidStudio/: settings.gradle
Builds/AndroidStudio/app/: CMakeLists.txt  build.gradle
Builds/LinuxMakefile/: Makefile
Builds/MacOSX/: Info-App.plist
Builds/MacOSX/schoff_FM.xcodeproj/: project.pbxproj
Builds/VisualStudio2019/: resources.rc  schoff_FM.sln  schoff_FM_App.vcxproj  schoff_FM_App.vcxproj.filters
Builds/VisualStudio2022/: schoff_FM.sln  schoff_FM_App.vcxproj  schoff_FM_App.vcxproj.filters
Builds/iOS/: Info-App.plist
Builds/iOS/schoff_FM.xcodeproj/: project.pbxproj
JuceLibraryCode/: AppConfig.h  JuceHeader.h
Old HTMLs/: schoffhauzer_synth_faceplate (modern).html
Resources/: faceplate.html
Schoff_FM (old CSS)/: README.md  schoff_stereo.dsp
Schoff_FM (old CSS)/schoff_stereo/: schoff_stereo.jucer
Schoff_FM (old CSS)/schoff_stereo/Builds/Android/: local.properties  settings.gradle
Schoff_FM (old CSS)/schoff_stereo/Builds/Android/app/: CMakeLists.txt  build.gradle
Schoff_FM (old CSS)/schoff_stereo/Builds/Android/app/src/debug/res/values/: string.xml
Schoff_FM (old CSS)/schoff_stereo/Builds/LinuxMakefile/: Makefile
Schoff_FM (old CSS)/schoff_stereo/Builds/MacOSX/: Info-AU.plist  Info-AUv3_AppExtension.plist  Info-Standalone_Plugin.plist  Info-VST3.plist  Info-VST3_Manifest_Helper.plist
Schoff_FM (old CSS)/schoff_stereo/Builds/MacOSX/schoff_stereo.xcodeproj/: project.pbxproj
Schoff_FM (old CSS)/schoff_stereo/Builds/VisualStudio2019/: schoff_stereo.sln  schoff_stereo_SharedCode.vcxproj  schoff_stereo_SharedCode.vcxproj.filters  schoff_stereo_StandalonePlugin.vcxproj  schoff_stereo_StandalonePlugin.vcxproj.filters  schoff_stereo_VST3.vcxproj  schoff_stereo_VST3.vcxproj.filters  schoff_stereo_VST3ManifestHelper.vcxproj
Schoff_FM (old CSS)/schoff_stereo/Builds/VisualStudio2022/: resources.rc  schoff_stereo.sln  schoff_stereo_SharedCode.vcxproj  schoff_stereo_SharedCode.vcxproj.filters  schoff_stereo_StandalonePlugin.vcxproj  schoff_stereo_VST3.vcxproj  schoff_stereo_VST3ManifestHelper.vcxproj
Schoff_FM (old CSS)/schoff_stereo/Builds/iOS/: Info-AUv3_AppExtension.plist  Info-Standalone_Plugin.plist
Schoff_FM (old CSS)/schoff_stereo/Builds/iOS/schoff_stereo.xcodeproj/: project.pbxproj
Schoff_FM (old CSS)/schoff_stereo/JuceLibraryCode/: AppConfig.h  BinaryData.cpp  BinaryData.h  JuceHeader.h  JucePluginDefines.h
Schoff_FM Modern/: faceplate.html
Schoff_FM Modern/schoff_FM.vst3/Contents/Resources/: moduleinfo.json
Source/: HilbertStereoWidth.h  LushChorus.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SpectrumAnalyzer.h  StereoDelay.h
